--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
                       <p>https://github.com/udacity</p>
                 </div>
                 <div class = "col-md-4">
-                      <img class = "img-responsive" src="images/me_yosemite.jpg" alt="img2" data-toggle="modal" data-target="#project1">>
+                      <img class = "img-responsive" src="images/me_yosemite.jpg" alt="img2" data-toggle="modal" data-target="#project2">>
                       <h3 class = "text-uppercase"> Yosemite, CA </h3>
                       <p>https://github.com/udacity</p>
                 </div>
                 <div class = "col-md-4">
-                      <img class = "img-responsive" src="images/burlington_vermont.jpg" alt="img3" data-toggle="modal" data-target="#project1">>
+                      <img class = "img-responsive" src="images/burlington_vermont.jpg" alt="img3" data-toggle="modal" data-target="#project3">>
                       <h3 class = "text-uppercase"> Burlington, VT </h3>
                       <p>https://github.com/udacity</p>
                 </div>
@@ -114,6 +114,39 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="project2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+          </div>
+          <div class="modal-body">
+            <img class="img-responsive" src="images/me_yosemite.jpg" alt="img2">
+            This picture is from my summer hiking trip to the Yosemite. 
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
         
+    <div class="modal fade" id="project3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+          </div>
+          <div class="modal-body">
+            <img class="img-responsive" src="images/burlington_vermont.jpg" alt="img3">
+            This picture is from our recent visit to the peaceful waterfront at the Burlington, Vermont. 
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>    
     </body>
 </html>
